# absa_ubunye_pipelines

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml  validate_pr.yml
bundles/: flood.yml  telematics.yml
pipelines/flood/etl/flood_risk/: config.yaml  transformations.py
pipelines/flood/etl/flood_risk/notebooks/: flood_risk_dev.py
pipelines/flood/etl/geocode_addresses/: config.yaml  transformations.py
pipelines/flood/etl/geocode_addresses/notebooks/: geocode_addresses_dev.py
pipelines/telematics/etl/policy_device_mapping/: config.yaml
pipelines/telematics/etl/policy_device_mapping/notebooks/: policy_device_mapping_dev.py
reference/legacy_notebooks/: README.md  item-etl-exposure-mappping.py  smart-flood-detection.py  smart-rewards-telematics.py
tests/: conftest.py  test_flood_geocode.py  test_flood_risk.py  test_telematics (1).py  test_telematics.py
