[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "absa-ubunye-pipelines"
version = "0.1.0"
description = "ABSA Databricks pipelines orchestrated by ubunye-engine."
requires-python = ">=3.11,<3.13"
dependencies = [
    "ubunye-engine[spark]==0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "pyspark==3.5.*",
    "pandas>=2",
    "requests>=2.32",
    "certifi>=2024.7",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
